--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
-.App {
-	text-align: center;
+* {
+	box-sizing: border-box;
+}
+html {
+	position: relative;
+}
+.navbar {
+	background-color: #f4f3e7;
+}
+
+.nav-link {
+	color: #1f4f46;
 }
