navlink edited, about component built, rendering and styled

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-body {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
+* {
+	box-sizing: border-box;
+	margin: 0 auto;
 }
+
 ​ .logout-link {
 	cursor: pointer;
 }
