--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -3,26 +3,17 @@
 } */
 
 /* The hero image */
-.hero-image {
+.jumbotron {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: url("../img/hero.jpg");
 
   /* Set a specific height */
   height: 100%;
-
+    padding-bottom: 200px;
+    padding-top: 200px;
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  /* position: relative; */
 }
