--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -4,16 +4,16 @@
 
 /* The hero image */
 .jumbotron {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: url("../img/hero.jpg");
-
-  /* Set a specific height */
-  height: 100%;
-    padding-bottom: 200px;
-    padding-top: 200px;
-  /* Position and center the image to scale nicely on all screens */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* position: relative; */
+	/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+	background-image: url("../img/hero.jpg");
+	/* Set a specific height */
+	height: 100%;
+	padding-bottom: 20em;
+	padding-top: 20em;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-bottom: 0;
+	border-radius: 0;
 }
