--- a/src/components/css/Signup.css
+++ b/src/components/css/Signup.css
@@ -1,5 +1,5 @@
 .signup__wrapper {
-	background-image: url("../img/greens.jpg");
+	background-image: url("../../img/greens.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
