--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -5,7 +5,7 @@
 /* The hero image */
 .jumbotron {
 	/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-	background-image: url("../img/hero.jpg");
+	background-image: url("../../img/hero.jpg");
 	/* Set a specific height */
 	height: 100%;
 	padding-bottom: 20em;
