--- a/src/components/css/Search.css
+++ b/src/components/css/Search.css
@@ -1,7 +1,10 @@
-.search__wrapper {
+.search__container {
 	background-image: url("../../img/search-img.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 0;
+}
+.card {
+	background-color: rgba(255, 255, 255, 0.639);
 }
