happy with favs page

--- a/src/components/css/FavoritesCards.css
+++ b/src/components/css/FavoritesCards.css
@@ -1,7 +1,5 @@
-/* .makeStyles-paper-49 {
-    padding: 0px;
+.Fav-Header{
+    margin-top: 5%;
+    text-align: center;
+    margin-right: 3%;
 }
-
-.MuiPaper-root {
-    padding:0px;
-} */
