--- a/src/components/css/HowItWorks.css
+++ b/src/components/css/HowItWorks.css
@@ -1,3 +1,14 @@
 .step_section {
 	background-color: #f4f3e7;
 }
+
+
+.container{
+	align-content: center;
+	margin-left: 11%;
+	padding: 3%;
+}
+
+h1 {
+	padding-top: 3%;
+}
