--- a/src/components/css/HowItWorks.css
+++ b/src/components/css/HowItWorks.css
@@ -3,12 +3,12 @@
 }
 
 
-.container{
+.contHiw{
 	align-content: center;
-	margin-left: 11%;
-	padding: 3%;
+	padding: 2%;
 }
 
-h1 {
+.hIW {
 	padding-top: 3%;
+	padding-right: 0px;
 }
