--- a/src/components/css/Testimonial.css
+++ b/src/components/css/Testimonial.css
@@ -1,7 +1,10 @@
-h1 {
+.testimonialHeader {
     text-align: center;
+    padding-right: 0px;
+    padding: 2%;
 }
 
 p {
     padding-bottom: 1%;
+    
 }
