--- a/src/components/css/Signup.css
+++ b/src/components/css/Signup.css
@@ -14,6 +14,13 @@
 .btn {
 	background-color: #1f4f46;
 	color: white;
+	border-color: #a9c1a9;
+}
+
+.btn:hover {
+	color: #000000;
+    background-color: #a9c1a9;
+    border-color: #1f4f46;
 }
 
 .login {
