--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -5,3 +5,12 @@
 .about__header {
 	text-align: center;
 }
+
+h1{
+	font-family: 'Cormorant Garamond', serif;
+}
+
+body{
+	font-family: 'Cormorant Garamond', serif;
+font-family: 'Montserrat', sans-serif;
+}
