--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -22,10 +22,25 @@
 	background-color: #1f4f46;
 	color: white;
 	border-color: #a9c1a9;
+	
 }
 
 .btn:hover {
 	color: #000000;
     background-color: #a9c1a9;
     border-color: #1f4f46;
+}
+
+h1{
+	font-family: 'Cormorant Garamond', serif;
+}
+
+body{
+	font-family: 'Cormorant Garamond', serif;
+font-family: 'Montserrat', sans-serif;
+}
+
+.body{
+	font-family: 'Cormorant Garamond', serif;
+font-family: 'Montserrat', sans-serif;
 }
