--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
 	margin: 0;
 }
 
+body {
+	font-family: "Montserrat", sans-serif;
+}
+
+h1 {
+	font-family: "Cormorant Garamond", serif;
+}
+
 ​ .logout-link {
 	cursor: pointer;
 }
