--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -3,6 +3,8 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	padding-bottom: 15%;
+	padding-top: 7%;
 }
 .profile__info {
 	background-color: rgba(255, 255, 255, 0.434);
