--- a/src/components/css/Search.css
+++ b/src/components/css/Search.css
@@ -4,6 +4,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 0;
+	padding-bottom: 10%;
 }
 .card {
 	background-color: rgba(255, 255, 255, 0.639);
