--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -14,6 +14,11 @@
 	border-radius: 0;
 }
 
+.hero__header,
+.hero__content {
+	text-align: left;
+}
+
 .btn {
 	background-color: #1f4f46;
 	color: white;
